--- a/docs/src/main/asciidoc/container-image.adoc
+++ b/docs/src/main/asciidoc/container-image.adoc
@@ -19,18 +19,15 @@ Quarkus provides extensions for building (and pushing) container images. Current
 === JIB
 
 The extension `quarkus-container-image-jib` is powered by https://github.com/GoogleContainerTools/jib[Jib] for performing container image builds.
-The major benefit of using Jib with Quarkus is that all dependencies (everything found under target/lib) are cached in a different layer than the actual application making rebuilds really fast and small (when it comes to pushing).
+The major benefit of using Jib with Quarkus is that all the dependencies (everything found under `target/lib`) are cached in a different layer than the actual application making rebuilds really fast and small (when it comes to pushing).
 Another important benefit of using this extension is that it provides the ability to create a container image without having to have any dedicated client side tooling (like Docker) or running daemon processes (like the Docker daemon)
 when all that is needed is the ability to push to a container image registry.
 
-To use this image extension, you just need to add the following dependency into your project.
+To use this feature, add the following extension to your project:
 
-[source,xml]
+[source,shell]
 ----
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-container-image-jib</artifactId>
-    </dependency>
+./mvnw quarkus:add-extension -Dextensions="container-image-jib"
 ----
 
 NOTE: In situations where all that is needed to build a container image and no push to a registry is necessary (essentially by having set `quarkus.container-image.build=true` and left `quarkus.container-image.push` unset - it defaults to `false`), then this extension creates a container image and registers
@@ -40,38 +37,32 @@ show up when executing `docker images`.
 [#docker]
 === Docker
 
-The extension `quarkus-container-image-docker` is using the docker binary and the generated Dockerfiles under `src/main/docker` in order to perform docker builds.
+The extension `quarkus-container-image-docker` is using the Docker binary and the generated Dockerfiles under `src/main/docker` in order to perform Docker builds.
 
-To use this image extension, you just need to add the following dependency into your project.
+To use this feature, add the following extension to your project.
 
-[source,xml]
+[source,shell]
 ----
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-container-image-docker</artifactId>
-    </dependency>
+./mvnw quarkus:add-extension -Dextensions="container-image-docker"
 ----
 
 [#s2i]
 === S2I
 
-The extension `quarkus-container-image-s2i` is using s2i binary builds in order to perform container builds inside the Openshift cluster.
-The idea behind the binary build is that you just upload the the artifact and its dependencies to the cluster and during the build they will be merged to a builder image (defaults to `fabric8/s2i-java`).
+The extension `quarkus-container-image-s2i` is using S2I binary builds in order to perform container builds inside the OpenShift cluster.
+The idea behind the binary build is that you just upload the artifact and its dependencies to the cluster and during the build they will be merged to a builder image (defaults to `fabric8/s2i-java`).
 
-The benefit of this approach, is that it can be combined with Openshift's `DeploymentConfig` that makes it easy to rollout changes to the cluster.
+The benefit of this approach, is that it can be combined with OpenShift's `DeploymentConfig` that makes it easy to rollout changes to the cluster.
 
-To use this image extension, you just need to add the following dependency into your project.
+To use this feature, add the following extension to your project.
 
 [source,xml]
 ----
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-container-image-s2i</artifactId>
-    </dependency>
+./mvnw quarkus:add-extension -Dextensions="container-image-s2i"
 ----
 
-S2i builds, require creating a `BuildConfig` and two `ImageStream` resources, one of the builder image and one for the output image.
-The creation of such objects is being taken care of by the Quarkus kubernetes extension.
+S2I builds require creating a `BuildConfig` and two `ImageStream` resources, one for the builder image and one for the output image.
+The creation of such objects is being taken care of by the Quarkus Kubernetes extension.
 
 == Building
 
