Placeholders section - Unnecessary lines removed

--- a/docs/src/main/asciidoc/config.adoc
+++ b/docs/src/main/asciidoc/config.adoc
@@ -442,6 +442,76 @@ The proper way to check the active profile programmatically is to use the `getAc
 Using `@ConfigProperty("quarkus.profile")` will *not* work properly.
 ====
 
+=== Using placeholders
+
+Quarkus supports the use of placeholders in the `application.properties` file on build time.
+
+The placeholder can be used by enclosing the key inside `${}`.
+
+For example having the following property:
+
+[source,properties]
+----
+remote.host=quarkus.io
+----
+having another property defined as
+
+[source,properties]
+----
+callable.url=http://${remote.host}/
+----
+
+will result on the value of the `callable.url` property to be set at build time to
+
+[source,properties]
+----
+callable.url=quarkus.io
+----
+
+Another example would be defining different database servers depending on profiles used
+
+[source,properties]
+----
+%dev.quarkus.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false
+quarkus.datasource.url=jdbc:mysql://remotehost:3306/mydatabase?useSSL=false
+----
+
+can be simplified by having
+
+[source,properties]
+----
+%dev.application.server=localhost
+application.server=remotehost
+
+quarkus.datasource.url=jdbc:mysql://${application.server}:3306/mydatabase?useSSL=false
+----
+
+It does result in one more line in this example but the value of `application.server` can be reused in other properties, diminishing the possibility of typos and providing more flexibility in properties definitions.
+
+=== Combining placeholders and environment variables
+
+Quarkus also supports the combination of both placeholders and environment variables.
+
+Let's assume you have following property defined in `application.properties`
+[source,properties]
+----
+remote.host=quarkus.io
+----
+
+You can combine environment variables and placeholders by having a property defined as follow
+[source,properties]
+----
+application.host=${HOST:${remote.host}}
+----
+
+This will expand the HOST environment variable and use the value of the property `remote.host` as the default value if `HOST` is not set.
+
+For the purpose of this section we used the defined property `remote.host`, it has to be noted that the value could have been a specific one like 
+----
+application.host=${HOST:localhost}
+----
+which will use `localhost` as the default value if `HOST` is not set.
+
 === Clearing properties
 
 Run time properties which are optional, and which have had values set at build time or which have a default value,
