--- a/docs/src/main/asciidoc/amazon-lambda.adoc
+++ b/docs/src/main/asciidoc/amazon-lambda.adoc
@@ -22,7 +22,7 @@ To complete this guide, you need:
 
 * less than 30 minutes
 * JDK 1.8 (AWS requires JDK 1.8)
-* Apache Maven 3.5.3+
+* Apache Maven {maven-version}
 * https://aws.amazon.com[An Amazon AWS account]
 * https://docs.aws.amazon.com/cli/latest/userguide/cli-chap-install.html[AWS CLI]
 * https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-sam-cli-install.html[AWS SAM CLI], for local testing
