--- a/docs/src/main/asciidoc/azure-functions-http.adoc
+++ b/docs/src/main/asciidoc/azure-functions-http.adoc
@@ -21,7 +21,7 @@ To complete this guide, you need:
 
 * less than 15 minutes
 * JDK 1.8 (Azure requires JDK 1.8)
-* Apache Maven 3.5.3+
+* Apache Maven {maven-version}
 * https://azure.microsoft.com[An Azure Account].  Free accounts work.
 * https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[Azure CLI Installed]
 
