--- a/docs/src/main/asciidoc/deploying-to-openshift.adoc
+++ b/docs/src/main/asciidoc/deploying-to-openshift.adoc
@@ -17,8 +17,8 @@ To complete this guide, you need:
 * roughly 5 minutes
 * an IDE
 * JDK 1.8+ installed with `JAVA_HOME` configured appropriately
-* Apache Maven 3.5.3+
-* access to an OpenShift or cluster (Minishift is a viable option)
+* Apache Maven {maven-version}
+* access to an OpenShift cluster (Minishift is a viable option)
 
 == Creating the Maven project
 
