--- a/docs/src/main/asciidoc/getting-started.adoc
+++ b/docs/src/main/asciidoc/getting-started.adoc
@@ -34,7 +34,7 @@ To complete this guide, you need:
 * less than 15 minutes
 * an IDE
 * JDK 8 or 11+ installed with `JAVA_HOME` configured appropriately
-* Apache Maven 3.5.3+
+* Apache Maven {maven-version}
 
 [TIP]
 .Verify Maven is using the Java you expect
