--- a/docs/src/main/asciidoc/kogito.adoc
+++ b/docs/src/main/asciidoc/kogito.adoc
@@ -25,7 +25,7 @@ To complete this guide, you need:
 * less than 15 minutes
 * an IDE (Eclipse is preferred with the BPMN modeller plugin)
 * JDK 1.8+ installed with `JAVA_HOME` configured appropriately
-* Apache Maven 3.5.3+
+* Apache Maven {maven-version}
 * Docker
 
 === Install modelling plugins in your IDE
