--- a/docs/src/main/asciidoc/native-and-ssl.adoc
+++ b/docs/src/main/asciidoc/native-and-ssl.adoc
@@ -21,7 +21,7 @@ To complete this guide, you need:
 * less than 20 minutes
 * an IDE
 * GraalVM installed with `JAVA_HOME` and `GRAALVM_HOME` configured appropriately
-* Apache Maven 3.5.3+
+* Apache Maven {maven-version}
 
 This guide is based on the REST client guide so you should get this Maven project first.
 
