--- a/docs/src/main/asciidoc/tests-with-coverage.adoc
+++ b/docs/src/main/asciidoc/tests-with-coverage.adoc
@@ -34,7 +34,7 @@ To complete this guide, you need:
 * less than 15 minutes
 * an IDE
 * JDK 1.8+ installed with JAVA_HOME configured appropriately
-* Apache Maven 3.5.3+
+* Apache Maven {maven-version}
 * Having completed the link:https://quarkus.io/guides/getting-started-testing[Testing your application guide]
 
 == Architecture
