--- a/docs/src/main/asciidoc/kubernetes.adoc
+++ b/docs/src/main/asciidoc/kubernetes.adoc
@@ -166,10 +166,10 @@ The Docker registry can be specified with the following property:
 
 [source]
 ----
-quarkus.container-image.registry=http://my.docker-registry.net
+quarkus.container-image.registry=my.docker-registry.net
 ----
 
-By adding this property along with the rest of the container-image properties of the previous section, the generated manifests will use the image `http://my.docker-registry.net/quarkus/demo-app:1.0`.
+By adding this property along with the rest of the container-image properties of the previous section, the generated manifests will use the image `my.docker-registry.net/quarkus/demo-app:1.0`.
 The image is not the only thing that can be customized in the generated manifests, as will become evident in the following sections.
 
 === Labels and Annotations
