--- a/docs/src/main/asciidoc/deploying-to-kubernetes.adoc
+++ b/docs/src/main/asciidoc/deploying-to-kubernetes.adoc
@@ -58,7 +58,7 @@ When we executed the previous command, the following dependencies were added to 
     </dependency>
 ----
 
-By adding these dependencies, we enable the generation of Kubernetes manifests each time we perform a build while also enabling the build of a container-image.
+By adding these dependencies, we enable the generation of Kubernetes manifests each time we perform a build while also enabling the build of a container image.
 For example, following the execution of `./mvnw package` you will notice amongst the other files that are created, two files named
 `kubernetes.json` and `kubernetes.yml` in the `target/kubernetes/` directory.
 
@@ -146,8 +146,8 @@ The full source of the `kubernetes.json` file looks something like this:
 }
 ----
 
-An important thing to note about the `Deployment` is that is uses `yourDockerUsername/test-quarkus-app:1.0-SNAPSHOT` as the container-image of the `Pod`.
-The name of the image is controlled by the `Jib` extension and can be customized using the usual `application.properties`.
+An important thing to note about the `Deployment` is that is uses `yourDockerUsername/test-quarkus-app:1.0-SNAPSHOT` as the container image of the `Pod`.
+The name of the image is controlled by the Jib extension and can be customized using the usual `application.properties`.
 
 For example with a configuration like:
 
@@ -169,7 +169,7 @@ The Docker registry can be specified with the following property:
 quarkus.container-image.registry=my.docker-registry.net
 ----
 
-By adding this property along with the rest of the container-image properties of the previous section, the generated manifests will use the image `my.docker-registry.net/quarkus/demo-app:1.0`.
+By adding this property along with the rest of the container image properties of the previous section, the generated manifests will use the image `my.docker-registry.net/quarkus/demo-app:1.0`.
 The image is not the only thing that can be customized in the generated manifests, as will become evident in the following sections.
 
 === Labels and Annotations
@@ -280,7 +280,7 @@ Any volume can be mounted with a simple configuration:
 quarkus.kubernetes.mounts.my-volume.path=/where/to/mount
 ----
 
-This will add a mount to my pod for volume `my-volume` to path `/where/to/mount`.
+This will add a mount to the pod for volume `my-volume` to path `/where/to/mount`.
 The volumes themselves can be configured as shown in the sections below.
 
 ===== Secret volumes
@@ -728,8 +728,8 @@ Each time deployment is requested, a container image build will be implicitly tr
 
 === Deploying
 
-When deployment is enabled, the kubernetes extension will selected the resources specified by `quarkus.kubernetes.deployment.target` and deploy them.
-This assumes that a `.kube/config` is available in your user directory that points to the target kubernetes cluster.
+When deployment is enabled, the Kubernetes extension will select the resources specified by `quarkus.kubernetes.deployment.target` and deploy them.
+This assumes that a `.kube/config` is available in your user directory that points to the target Kubernetes cluster.
 In other words the extension will use whatever cluster `kubectl` uses. The same applies to credentials.
 
 At the moment no additional options are provided for further customization.
