fix compilation issue after the update to MongoDb 4.0

--- a/docs/src/main/asciidoc/mongodb.adoc
+++ b/docs/src/main/asciidoc/mongodb.adoc
@@ -328,7 +328,8 @@ public class ReactiveFruitService {
         Document document = new Document()
                 .append("name", fruit.getName())
                 .append("description", fruit.getDescription());
-        return getCollection().insertOne(document);
+        return getCollection().insertOne(document)
+                .onItem().ignore().andContinueWithNull();
     }
 
     private ReactiveMongoCollection<Document> getCollection() {
