--- a/docs/src/main/asciidoc/microprofile-metrics.adoc
+++ b/docs/src/main/asciidoc/microprofile-metrics.adoc
@@ -151,7 +151,8 @@ If you want, try some more calls with numbers of your choice.
 To view the metrics, execute `curl -H"Accept: application/json" localhost:8080/metrics/application`
 You will receive a response such as:
 
-```
+[source,json]
+----
 {
   "org.acme.microprofile.metrics.PrimeNumberChecker.checksTimer" : {
     "p50": 217.231273,
@@ -173,7 +174,7 @@ You will receive a response such as:
   "org.acme.microprofile.metrics.PrimeNumberChecker.performedChecks" : 2,
   "org.acme.microprofile.metrics.PrimeNumberChecker.highestPrimeNumberSoFar" : 629521085409773
 }
-```
+----
 
 Let's explain the meaning of each metric:
 
