--- a/docs/src/main/asciidoc/security-openid-connect-multitenancy.adoc
+++ b/docs/src/main/asciidoc/security-openid-connect-multitenancy.adoc
@@ -3,7 +3,7 @@ This guide is maintained in the main Quarkus repository
 and pull requests should be submitted there:
 https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 ////
-= Quarkus - Supporting Multi-Tenancy in OpenID Connect Applications 
+= Quarkus - Using OpenID Connect Multi-Tenancy
 
 include::./attributes.adoc[]
 :extension-status: preview
