--- a/docs/src/main/asciidoc/security-openid-connect.adoc
+++ b/docs/src/main/asciidoc/security-openid-connect.adoc
@@ -3,7 +3,7 @@ This guide is maintained in the main Quarkus repository
 and pull requests should be submitted there:
 https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 ////
-= Quarkus - Using OpenID Connect Adapter to Protect JAX-RS Applications
+= Quarkus - Using OpenID Connect to Protect Service Applications
 
 include::./attributes.adoc[]
 :extension-status: preview
