--- a/docs/src/main/asciidoc/vault.adoc
+++ b/docs/src/main/asciidoc/vault.adoc
@@ -96,6 +96,13 @@ in the following step)
 * TLS is disabled
 * a _kv secret engine v2_ is mounted at `secret/`
 
+[NOTE]
+====
+By default quarkus assumes that a _kv secret engine_ in version *2* mounted at path `secret/` will be used.
+If that is not the case, please use properties `quarkus.vault.kv-secret-engine-version`
+and `quarkus.vault.kv-secret-engine-mount-path` accordingly.
+====
+
 In the following step, we are going to add a `userpass` authentication that we will use from the Quarkus application,
 to access a secret stored in the _kv secret engine_.
 
