--- a/docs/src/main/asciidoc/command-mode-reference.adoc
+++ b/docs/src/main/asciidoc/command-mode-reference.adoc
@@ -7,7 +7,7 @@ https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 
 include::./attributes.adoc[]
 
-This reference covers how to write application that run and then exit.
+This reference covers how to write applications that run and then exit.
 
 == Writing Command Mode Applications
 
@@ -25,7 +25,7 @@ The simplest possible command mode application might appear as follows:
 [source,java]
 ----
 import io.quarkus.runtime.QuarkusApplication;
-import io.quarkus.runtime.annotations.DefaultMain;
+import io.quarkus.runtime.annotations.QuarkusMain;
 
 @QuarkusMain    // <1>
 public class HelloWorldMain implements QuarkusApplication {
@@ -36,7 +36,7 @@ public class HelloWorldMain implements QuarkusApplication {
  }
 }
 ----
-<1> The `@QuarkusMain` annotation to tells Quarkus that this is the main entry point.
+<1> The `@QuarkusMain` annotation tells Quarkus that this is the main entry point.
 <2> The `run` method is invoked once Quarkus starts, and the application stops when it finishes.
 
 If we want to use a Java main to run the application main it would look like:
@@ -44,7 +44,7 @@ If we want to use a Java main to run the application main it would look like:
 [source,java]
 ----
 import io.quarkus.runtime.Quarkus;
-import io.quarkus.runtime.annotations.DefaultMain;
+import io.quarkus.runtime.annotations.QuarkusMain;
 
 @QuarkusMain
 public class JavaMain {
@@ -85,7 +85,7 @@ When running a command mode application the basic lifecycle is as follows:
 
 . Start Quarkus
 . Run the `QuarkusApplication` main method
-. Shutdown Quarkus and exit the JVM after the main method returns
+. Shut down Quarkus and exit the JVM after the main method returns
 
 Shutdown is always initiated by the application main thread returning. If you want to run some logic on startup,
 and then run like a normal application (i.e. not exit) then you should call `Quarkus.waitForExit` from the main
